--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: I am Rich man
 logo:  # you can add own logo.
 description: Passionate designer curating designs for new startups  and  founders  and crafts  beautiful user interfaces with love.
 baseurl: "/derrick" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://hoanghaivo.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 
 # Author Settings
