--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: I am Rich man
+title: I am a Rich man
 logo:  # you can add own logo.
 description: Passionate designer curating designs for new startups  and  founders  and crafts  beautiful user interfaces with love.
 baseurl: "" # the subpath of your site, e.g. /blog
