--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: "https://hoanghaivo.github.io" # the base hostname & protocol for your site
 # Author Settings
 author:
   name: Derrick Wells
-  image: '/assets/img/01.jpg'
+  image: '/assets/img/hai-avatar.jpg'
   job: Independent Product Designer
   bio: Passionate designer curating designs for new startups  and  founders  and crafts  beautiful user interfaces with love.
   email: forexample@website.com
