--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url: "https://hoanghaivo.github.io" # the base hostname & protocol for your site
 author:
   name: Hoang Hai Vo
   image: '/assets/img/hai-avatar.jpg'
-  job: Business Solution Consultants
+  job: Business Solution Consultant
   bio: Tư vấn giải pháp doanh nghiệp - Ứng dụng công nghệ thông tin vận hành nghiệp vụ thực tế
   email: haivo.ssg@gmail.com
 
